--- a/app_test/requirements.txt
+++ b/app_test/requirements.txt
@@ -1,6 +1,8 @@
 cachetools==5.2.0
+cbrf==0.5.0
 certifi==2022.6.15.1
 charset-normalizer==2.1.1
+flake8==4.0.1
 google-api-core==2.10.0
 google-api-python-client==2.60.0
 google-auth==2.11.0
@@ -8,18 +10,19 @@ google-auth-httplib2==0.1.0
 googleapis-common-protos==1.56.4
 httplib2==0.20.4
 idna==3.3
+isort==5.10.1
+mccabe==0.6.1
 oauth2client==4.1.3
 protobuf==4.21.5
+psycopg2==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.8.0
+pyflakes==2.4.0
 pyparsing==3.0.9
+python-dotenv==0.20.0
 requests==2.28.1
 rsa==4.9
 six==1.16.0
 uritemplate==4.1.1
 urllib3==1.26.12
-python-dotenv==0.20.0
-flake8==4.0.1
-isort==5.10.1
-psycopg2==2.9.3
-cbrf==0.5.0
